--- a/order-service.yaml
+++ b/order-service.yaml
@@ -1202,8 +1202,8 @@ definitions:
         description: "Fulfillment Status"
         enum:
         - "PROCESSING"
-        - "FULFILLED"
-        - "PARTIALLY_FULFILLED"
+        - "SHIPPED"
+        - "PARTIALLY_SHIPPED"
         - "DELIVERED"
         - "COULD_NOT_DELIVER"
         - "RETURNED"
