Fixing merchant service case

--- a/merchant-service.yaml
+++ b/merchant-service.yaml
@@ -450,15 +450,15 @@ components:
     PageMerchant:
       type: object
       properties:
-        totalPages:
+        total_pages:
           type: integer
           format: int32
-        totalElements:
+        total_elements:
           type: integer
           format: int64
         pageable:
           $ref: '#/components/schemas/Pageable'
-        numberOfElements:
+        number_of_elements:
           type: integer
           format: int32
         last:
@@ -482,15 +482,15 @@ components:
     PageMerchantSummary:
       type: object
       properties:
-        totalPages:
+        total_pages:
           type: integer
           format: int32
-        totalElements:
+        total_elements:
           type: integer
           format: int64
         pageable:
           $ref: '#/components/schemas/Pageable'
-        numberOfElements:
+        number_of_elements:
           type: integer
           format: int32
         last:
@@ -516,10 +516,10 @@ components:
       properties:
         unpaged:
           type: boolean
-        pageSize:
+        page_size:
           type: integer
           format: int32
-        pageNumber:
+        page_number:
           type: integer
           format: int32
         paged:
